--- a/css/styles.css
+++ b/css/styles.css
@@ -147,11 +147,9 @@ address {
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
-text-transform: capitalize;
-text-align: center
-   color: #2e2f42;
-  
-}
+    text-transform: capitalize;
+    text-align: center;
+    color: #2e2f42; }
 
 .team-item {
     background-color: #ffffff;
@@ -183,9 +181,7 @@ text-align: center
     letter-spacing: 0.02em;
     color: #2e2f42;
     text-align: center;
-    text-transform: capitalize;
-   
-}
+    text-transform: capitalize; }
 
 .portfolio-item {
     background-color: #ffffff;
