--- a/css/styles.css
+++ b/css/styles.css
@@ -147,9 +147,9 @@ address {
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
-    text-transform: capitalize;
+color: #2e2f42;
     text-align: center;
-    color: #2e2f42; }
+    text-transform: capitalize; }
 
 .team-item {
     background-color: #ffffff;
